# ohmcp

./: Cargo.toml  README.md  bench-results.json  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ohmcp-bench/: Cargo.toml
crates/ohmcp-bench/src/: baseline.rs  main.rs
crates/ohmcp-cache/: Cargo.toml
crates/ohmcp-cache/src/: compress.rs  lib.rs  result_cache.rs
crates/ohmcp-client/: Cargo.toml
crates/ohmcp-client/src/: lib.rs  pipeline.rs
crates/ohmcp-core/: Cargo.toml
crates/ohmcp-core/src/: frame.rs  lib.rs  message.rs  rpc.rs
crates/ohmcp-security/: Cargo.toml
crates/ohmcp-security/examples/: crypto_bench.rs
crates/ohmcp-security/src/: acl.rs  auth.rs  crypto.rs  lib.rs
crates/ohmcp-transport/: Cargo.toml
crates/ohmcp-transport/src/: lib.rs  shm.rs  softbus.rs
crates/ohmcpd/: Cargo.toml
crates/ohmcpd/src/: lib.rs  main.rs  server.rs  tools.rs
crates/ohmcpd/tests/: server_e2e.rs  shm_e2e.rs
docs/: demo-script.md  design.md  pitch.md  slides.md  test-report.md
scripts/: chart.py  record-demo.sh
