[package]
name = "ohmcp-security"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chacha20poly1305.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
x25519-dalek.workspace = true
bytes.workspace = true
thiserror.workspace = true
