[package]
name = "ohmcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ohmcp-core = { path = "../ohmcp-core" }
ohmcp-cache = { path = "../ohmcp-cache" }
ohmcp-security = { path = "../ohmcp-security" }
ohmcp-transport = { path = "../ohmcp-transport" }
ohmcp-client = { path = "../ohmcp-client" }
tokio.workspace = true
bytes.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
